dataset/local/df_disallow_sudo/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-sudo-operations
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: disallow-sudo-operations
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: disallow-sudo-operations
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
